# hr-policy-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
data/raw/: README.md
data/raw/code_of_conduct/: accident_reporting.md  hours_work.md  rest_periods.md  work_accident.md
data/raw/employee_benefits/: benefits_overview.md  dental_plan.md  health_and_wellness.md  health_dental_plan.md  health_plan.md  life_insurance.md  travel_plan.md
data/raw/hr_communications/: benefits_open_enrollment_2026.md  harassment_policy_reminder.md  hybrid_attestation_reminder.md  leave_faq_bereavement_personal.md  linkedin_learning_launch.md  mental_health_week_2025.md  merit_review_and_pd_link.md  parental_leave_process_walkthrough.md  pd_cycle_launch_2026.md  vacation_year_end_reminder.md  winter_2026_training_calendar.md
data/raw/leave_policies/: adoption_leave.md  bereavement_leave.md  family_parental_absence.md  marriage_civil_union_leave.md  maternity_leave.md  moving_legal_duties_leave.md  parental_extended_leave.md  (+5 more)
docs/: PROJECT_PLAN.md  TECHNICAL_DOCUMENT.md  TECHNICAL_DOCUMENT_FR.md  take-home-Talsom-ai-instructions.md
presentation/: DEMO_QUESTIONS.md  SPEAKERS_NOTES.md
prompts/: system_prompt.md
scripts/: ingest.py
src/: agent.py  app.py  chain.py  config.py  document_loader.py  embeddings.py  retriever.py  text_splitter.py  vector_store.py
tests/: conftest.py  test_agent.py  test_config.py  test_document_loader.py  test_edge_cases.py  test_integration.py  test_text_splitter.py
(+6 files in other folders)
