[project]
name = "hr-policy-ai-agent"
version = "0.1.0"
description = "AI agent for HR policy Q&A using RAG (Retrieval-Augmented Generation)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "langchain>=0.3",
    "langchain-openai>=0.3",
    "langchain-chroma>=0.2",
    "langchain-community>=0.3",
    "chromadb>=0.6",
    "openai>=1.0",
    "streamlit>=1.40",
    "python-dotenv>=1.0",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
